# Sck-Anzeigetafel

./: .gitignore  Readme.md  app_data.json  app_data.pkl  pyproject.toml  sck_screen.spec  sck_screen_controller.py  version.yaml  webserver.py
helper/: build_exe.py  translate_ui_to_py.py
python_32_bit/: .python-version
python_64_bit/: pyproject.toml
static/html/: index.html
ui/: control.ui  display.ui  generated_control.py  generated_display.py
